--- a/tidy_basiques/tidy_basiques.html
+++ b/tidy_basiques/tidy_basiques.html
@@ -13,7 +13,7 @@
 <meta name="progressive" content="false" />
 <meta name="allow-skip" content="false" />
 
-<title>Tidyverse: Manipulation de données avec dplyr</title>
+<title>Manipulation de données avec tidyverse</title>
 
 
 <!-- highlightjs -->
@@ -132,8 +132,8 @@ length(tidyverse_packages(include_self = FALSE)) # pour afficher le nombre de pa
 <script type="application/json" data-ui-opts="1">{"engine":"r","has_checker":false,"caption":"R code"}</script>
 </div>
 </div>
-<div id="section-le-fonctionnement-du-package-dplyr" class="section level2">
-<h2>Le fonctionnement du package dplyr</h2>
+<div id="section-le-fonctionnement-de-dplyr" class="section level2">
+<h2>Le fonctionnement de <em>dplyr</em></h2>
 <p>Le package <em>dplyr</em> permet de manipuler et de traiter les données d’un tableau facilement. Le fonctionnement de dplyr se fait à partir de verbes qui indiquent l’opération à réaliser sur les données. En fait, les verbes sont utilisés comme noms des fonctions de <em>dplyr</em>. Par exemple, pour filtrer un tableau, afin de sélectionner une partie des données, le verbe filtrer, en anglais, est utiliser comme nom de fonction: <em>filter</em>. Nous verrons quelques verbes prochainement.</p>
 <p>Certaines fois, on a plusieurs opérations à réaliser en chaine, i.e, l’une après l’autre. On peut utiliser l’opérateur suivante, %&gt;%, dénommer <em>pipe</em>, pour enchainer des opérations. Un peu plus loin, des illustrations vous permettront de voir comment utiliser le pipe.</p>
 </div>
@@ -1577,7 +1577,7 @@ learnr:::store_exercise_cache("pipeExo7", list(setup = NULL, chunks = list(list(
 
 <!-- begin doc-metadata -->
 <div id="doc-metadata">
-<h2 class="title toc-ignore" style="display:none;">Tidyverse: Manipulation de données avec dplyr</h2>
+<h2 class="title toc-ignore" style="display:none;">Manipulation de données avec tidyverse</h2>
 </div>
 <!-- end doc-metadata -->
 
