--- a/tidy_basiques/tidy_basiques.html
+++ b/tidy_basiques/tidy_basiques.html
@@ -170,7 +170,7 @@ df_femme                                # Afficher les donnees du nouveau tablea
 <pre class="text"><code>arrange(df_sal,salaire)</code></pre>
 <script type="application/json" data-ui-opts="1">{"engine":"r","has_checker":false,"caption":"R code"}</script>
 </div>
-<p>Si on veut faire le tri, en partant du salaire le plus faible pour arriver au plus élevé, on ajoute la foncgtion <em>desc</em>.</p>
+<p>Si on veut faire le tri, en partant du salaire le plus élevé pour arriver au plus faible, on ajoute la foncgtion <em>desc</em>.</p>
 <div class="tutorial-exercise" data-label="arrange2" data-completion="1" data-diagnostics="1" data-startover="1" data-lines="0">
 <pre class="text"><code>arrange(df_sal,desc(salaire))</code></pre>
 <script type="application/json" data-ui-opts="1">{"engine":"r","has_checker":false,"caption":"R code"}</script>
@@ -214,7 +214,7 @@ Il est aussi possible de changer seulement quelques noms de colonnes, avec <em>r
 </div>
 <div id="section-relocate" class="section level3">
 <h3>relocate</h3>
-<p>Avec <em>relocate</em>, il est possible de changer de position les colonnes d’un tableau de données. On peut utiliser les arguments <em>.after</em> et <em>.before</em> pour indiquer les positions souhaitées. Ci-dessous, nous mettons l’âge après le payroll. Puis, nous plaçons le sexe avant la dernière colonne.</p>
+<p>Avec <em>relocate</em>, il est possible de changer de position les colonnes d’un tableau de données. On peut utiliser les arguments <em>.after</em> et <em>.before</em> pour indiquer les positions souhaitées. Ci-dessous, nous mettons l’âge après le salaire. Puis, nous plaçons le sexe avant la dernière colonne.</p>
 <div class="tutorial-exercise" data-label="relocate1" data-completion="1" data-diagnostics="1" data-startover="1" data-lines="0">
 <pre class="text"><code>relocate(df_sal,age,.after = salaire)</code></pre>
 <script type="application/json" data-ui-opts="1">{"engine":"r","has_checker":false,"caption":"R code"}</script>
@@ -240,7 +240,7 @@ Il est aussi possible de changer seulement quelques noms de colonnes, avec <em>r
 <script type="application/json" data-ui-opts="1">{"engine":"r","has_checker":false,"caption":"R code"}</script>
 </div>
 <p>En affichant le nouveau tableau, aucun changement ne sera remarqué, bien qu’en réalité les groupes soient créés.</p>
-<p>Souvent on crée des groupes afin de présenter par groupe les résultats d’autres fonctions. Par exemple, pour avoir la moyenne du payroll et de l’âge, par sexe, on utilise le tableau où les données sont regroupées par sexe, <em>df_groupS</em>. Après l’avoir exécuté, vous pouvez remplacer <em>df_groupS</em> par <em>df_sal</em> et l’exécuter, pour voir la différence.</p>
+<p>Souvent on crée des groupes afin de présenter par groupe les résultats d’autres fonctions. Par exemple, pour avoir la moyenne du salaire et de l’âge, par sexe, on utilise le tableau où les données sont regroupées par sexe, <em>df_groupS</em>. Vous pouvez modifier la deuxième ligne de code, en remplacer <em>df_groupS</em> par <em>df_sal</em> et l’exécuter, pour voir la différence.</p>
 <div class="tutorial-exercise" data-label="groupby2" data-completion="1" data-diagnostics="1" data-startover="1" data-lines="0">
 <pre class="text"><code>df_groupS&lt;-group_by(df_sal,sexe)
 
@@ -271,13 +271,15 @@ df2_femme                                # Afficher les donnees du nouveau table
 </div>
 <div id="section-exercice---slice" class="section level3">
 <h3>Exercice - slice</h3>
-<p>Utiliser <em>slice</em> pour extraire les données des lignes 1, 5, 10, et 20 du tableau <em>df_sal</em>. Nommer le nouveau tableau ainsi: <em>df_slice</em>. Puis, l’afficher, afin de voir le résultat de votre travail.</p>
+<p>Utiliser <em>slice</em> pour extraire les données des lignes 1, 5, 10, et 20 du tableau <em>df_sal</em>. Nommer le nouveau tableau ainsi: <em>df_slice</em>. Puis, l’afficher, afin de voir le résultat de votre travail. Si vous n’y arrivez pas, cliquez sur <em>Solution</em>, pour voir les lignes de code à exécuter.</p>
 <div class="tutorial-exercise" data-label="slice1b" data-completion="1" data-diagnostics="1" data-startover="1" data-lines="0">
 <script type="application/json" data-ui-opts="1">{"engine":"r","has_checker":false,"caption":"R code"}</script>
 </div>
 <div class="tutorial-exercise-support" data-label="slice1b-solution" data-completion="1" data-diagnostics="1" data-startover="1" data-lines="0">
 <pre class="text"><code>df_slice&lt;-df_sal%&gt;%
-  slice(c(1,5,10,20))</code></pre>
+  slice(c(1,5,10,20)) # pour indiquer les numeros des lignes a extraire
+
+df_slice              # pour afficher le nouveau tableau de données</code></pre>
 </div>
 </div>
 <div id="section-exercice---arrange" class="section level3">
@@ -287,7 +289,7 @@ df2_femme                                # Afficher les donnees du nouveau table
 <script type="application/json" data-ui-opts="1">{"engine":"r","has_checker":false,"caption":"R code"}</script>
 </div>
 <div class="tutorial-exercise-support" data-label="arrange1c-solution" data-completion="1" data-diagnostics="1" data-startover="1" data-lines="0">
-<pre class="text"><code>df_Arr&lt;-df_sal%&gt;%
+<pre class="text"><code>df_sal%&gt;%
   arrange(salaire)</code></pre>
 </div>
 <p>Avec <em>arrange</em>, réarranger à partir du sexe et de l’âge, les lignes du tableau de données <em>df_sal</em>.</p>
@@ -295,7 +297,7 @@ df2_femme                                # Afficher les donnees du nouveau table
 <script type="application/json" data-ui-opts="1">{"engine":"r","has_checker":false,"caption":"R code"}</script>
 </div>
 <div class="tutorial-exercise-support" data-label="arrange2b-solution" data-completion="1" data-diagnostics="1" data-startover="1" data-lines="0">
-<pre class="text"><code>df_ArrSA&lt;-df_sal%&gt;%
+<pre class="text"><code>df_sal%&gt;%
   arrange(sexe,age)</code></pre>
 </div>
 </div>
@@ -305,7 +307,7 @@ df2_femme                                # Afficher les donnees du nouveau table
 </div>
 <div id="section-pipe---illustrations" class="section level3">
 <h3>pipe - illustrations</h3>
-<p>Ci-dessous, nous regroupons les donn♪0es par sexe, puis nous calculons la moyenne du salaire. Nous obtenons alors la moyenne par sexe.</p>
+<p>Ci-dessous, nous regroupons les données par sexe, puis nous calculons la moyenne du salaire. Nous obtenons alors la moyenne par sexe.</p>
 <div class="tutorial-exercise" data-label="pipe1" data-completion="1" data-diagnostics="1" data-startover="1" data-lines="0">
 <pre class="text"><code>df_sal%&gt;%
   group_by(sexe)%&gt;%
@@ -371,8 +373,7 @@ df2_femme                                # Afficher les donnees du nouveau table
 <div class="tutorial-exercise-support" data-label="pipeExo4-solution" data-completion="1" data-diagnostics="1" data-startover="1" data-lines="0">
 <pre class="text"><code>df_sal%&gt;%
   filter(age&gt;50)%&gt;%
-  count(age)%&gt;%
-  arrange(desc(n))</code></pre>
+  count(sexe)</code></pre>
 </div>
 </div>
 <div id="section-exercice-5---pipe" class="section level3">
@@ -402,13 +403,13 @@ df2_femme                                # Afficher les donnees du nouveau table
 </div>
 <div id="section-exercice-7---pipe" class="section level3">
 <h3>Exercice 7 - pipe</h3>
-<p>Extraire les données des employés agés de moins de 30 ans, et calculer le nombre d’employés (la fréquence) par âge. Arranger les âges en fonction de leurs fréquences, avec la fonction <em>arrange</em>. Il faut arranger les âges en partant de l’âge le plus fréquent parmi les employés de moins de 20 ans au moins fréquent.</p>
+<p>Extraire les données des employés agés de moins de 28 ans, et calculer le nombre d’employés (la fréquence) par âge. Arranger les âges en fonction de leurs fréquences, avec la fonction <em>arrange</em>. Il faut arranger les âges en partant de l’âge le plus fréquent au moins fréquent, parmi les employés âgés de moins de 28 ans.</p>
 <div class="tutorial-exercise" data-label="pipeExo7" data-completion="1" data-diagnostics="1" data-startover="1" data-lines="0">
 <script type="application/json" data-ui-opts="1">{"engine":"r","has_checker":false,"caption":"R code"}</script>
 </div>
 <div class="tutorial-exercise-support" data-label="pipeExo7-solution" data-completion="1" data-diagnostics="1" data-startover="1" data-lines="0">
 <pre class="text"><code>df_sal%&gt;%
-  filter(age&lt;30)%&gt;%
+  filter(age&lt;28)%&gt;%
   count(age)%&gt;%
   arrange(desc(n))</code></pre>
 </div>
@@ -1112,15 +1113,16 @@ output$`tutorial-exercise-slice1b-output` <- renderUI({
 learnr:::store_exercise_cache("slice1b", list(setup = NULL, chunks = list(list(label = "slice1b", code = "", 
     opts = list(label = "\"slice1b\"", exercise = "TRUE"), engine = "r")), 
     code_check = NULL, error_check = NULL, check = NULL, solution = structure(c("df_slice<-df_sal%>%", 
-    "  slice(c(1,5,10,20))"), chunk_opts = list(label = "slice1b-solution")), 
-    options = list(eval = FALSE, echo = TRUE, results = "markup", 
-        tidy = FALSE, tidy.opts = NULL, collapse = FALSE, prompt = FALSE, 
-        comment = NA, highlight = FALSE, strip.white = TRUE, 
-        size = "normalsize", background = "#F7F7F7", cache = 0, 
-        cache.path = "tidy_basiques_cache/html/", cache.vars = NULL, 
-        cache.lazy = TRUE, dependson = NULL, autodep = FALSE, 
-        cache.rebuild = FALSE, fig.keep = "high", fig.show = "asis", 
-        fig.align = "default", fig.path = "tidy_basiques_files/figure-html/", 
+    "  slice(c(1,5,10,20)) # pour indiquer les numeros des lignes a extraire", 
+    "", "df_slice              # pour afficher le nouveau tableau de données"
+    ), chunk_opts = list(label = "slice1b-solution")), options = list(
+        eval = FALSE, echo = TRUE, results = "markup", tidy = FALSE, 
+        tidy.opts = NULL, collapse = FALSE, prompt = FALSE, comment = NA, 
+        highlight = FALSE, strip.white = TRUE, size = "normalsize", 
+        background = "#F7F7F7", cache = 0, cache.path = "tidy_basiques_cache/html/", 
+        cache.vars = NULL, cache.lazy = TRUE, dependson = NULL, 
+        autodep = FALSE, cache.rebuild = FALSE, fig.keep = "high", 
+        fig.show = "asis", fig.align = "default", fig.path = "tidy_basiques_files/figure-html/", 
         dev = "png", dev.args = NULL, dpi = 192, fig.ext = "png", 
         fig.width = 6.5, fig.height = 4, fig.env = "figure", 
         fig.cap = NULL, fig.scap = NULL, fig.lp = "fig:", fig.subcap = NULL, 
@@ -1146,7 +1148,7 @@ output$`tutorial-exercise-arrange1c-output` <- renderUI({
 learnr:::store_exercise_cache("arrange1c", list(setup = NULL, chunks = list(list(label = "arrange1c", code = "", 
     opts = list(label = "\"arrange1c\"", exercise = "TRUE"), 
     engine = "r")), code_check = NULL, error_check = NULL, check = NULL, 
-    solution = structure(c("df_Arr<-df_sal%>%", "  arrange(salaire)", 
+    solution = structure(c("df_sal%>%", "  arrange(salaire)", 
     ""), chunk_opts = list(label = "arrange1c-solution")), options = list(
         eval = FALSE, echo = TRUE, results = "markup", tidy = FALSE, 
         tidy.opts = NULL, collapse = FALSE, prompt = FALSE, comment = NA, 
@@ -1181,7 +1183,7 @@ output$`tutorial-exercise-arrange2b-output` <- renderUI({
 learnr:::store_exercise_cache("arrange2b", list(setup = NULL, chunks = list(list(label = "arrange2b", code = "", 
     opts = list(label = "\"arrange2b\"", exercise = "TRUE"), 
     engine = "r")), code_check = NULL, error_check = NULL, check = NULL, 
-    solution = structure(c("df_ArrSA<-df_sal%>%", "  arrange(sexe,age)", 
+    solution = structure(c("df_sal%>%", "  arrange(sexe,age)", 
     "", ""), chunk_opts = list(label = "arrange2b-solution")), 
     options = list(eval = FALSE, echo = TRUE, results = "markup", 
         tidy = FALSE, tidy.opts = NULL, collapse = FALSE, prompt = FALSE, 
@@ -1425,16 +1427,15 @@ output$`tutorial-exercise-pipeExo4-output` <- renderUI({
 learnr:::store_exercise_cache("pipeExo4", list(setup = NULL, chunks = list(list(label = "pipeExo4", code = "", 
     opts = list(label = "\"pipeExo4\"", exercise = "TRUE"), engine = "r")), 
     code_check = NULL, error_check = NULL, check = NULL, solution = structure(c("df_sal%>%", 
-    "  filter(age>50)%>%", "  count(age)%>%", "  arrange(desc(n))"
-    ), chunk_opts = list(label = "pipeExo4-solution", eval = FALSE)), 
-    options = list(eval = FALSE, echo = TRUE, results = "markup", 
-        tidy = FALSE, tidy.opts = NULL, collapse = FALSE, prompt = FALSE, 
-        comment = NA, highlight = FALSE, strip.white = TRUE, 
-        size = "normalsize", background = "#F7F7F7", cache = 0, 
-        cache.path = "tidy_basiques_cache/html/", cache.vars = NULL, 
-        cache.lazy = TRUE, dependson = NULL, autodep = FALSE, 
-        cache.rebuild = FALSE, fig.keep = "high", fig.show = "asis", 
-        fig.align = "default", fig.path = "tidy_basiques_files/figure-html/", 
+    "  filter(age>50)%>%", "  count(sexe)"), chunk_opts = list(
+        label = "pipeExo4-solution", eval = FALSE)), options = list(
+        eval = FALSE, echo = TRUE, results = "markup", tidy = FALSE, 
+        tidy.opts = NULL, collapse = FALSE, prompt = FALSE, comment = NA, 
+        highlight = FALSE, strip.white = TRUE, size = "normalsize", 
+        background = "#F7F7F7", cache = 0, cache.path = "tidy_basiques_cache/html/", 
+        cache.vars = NULL, cache.lazy = TRUE, dependson = NULL, 
+        autodep = FALSE, cache.rebuild = FALSE, fig.keep = "high", 
+        fig.show = "asis", fig.align = "default", fig.path = "tidy_basiques_files/figure-html/", 
         dev = "png", dev.args = NULL, dpi = 192, fig.ext = "png", 
         fig.width = 6.5, fig.height = 4, fig.env = "figure", 
         fig.cap = NULL, fig.scap = NULL, fig.lp = "fig:", fig.subcap = NULL, 
@@ -1531,8 +1532,8 @@ output$`tutorial-exercise-pipeExo7-output` <- renderUI({
 learnr:::store_exercise_cache("pipeExo7", list(setup = NULL, chunks = list(list(label = "pipeExo7", code = "", 
     opts = list(label = "\"pipeExo7\"", exercise = "TRUE"), engine = "r")), 
     code_check = NULL, error_check = NULL, check = NULL, solution = structure(c("df_sal%>%", 
-    "  filter(age<30)%>%", "  count(age)%>%", "  arrange(desc(n))"
-    ), chunk_opts = list(label = "pipeExo7-solution", eval = FALSE)), 
+    "  filter(age<28)%>%", "  count(age)%>%", "  arrange(desc(n))", 
+    ""), chunk_opts = list(label = "pipeExo7-solution", eval = FALSE)), 
     options = list(eval = FALSE, echo = TRUE, results = "markup", 
         tidy = FALSE, tidy.opts = NULL, collapse = FALSE, prompt = FALSE, 
         comment = NA, highlight = FALSE, strip.white = TRUE, 
